--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,11 @@
     <link href="~/Content/DivTable.css" rel="stylesheet" type="text/css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+
+
+
+
 </head>
 <body>
     <header>
@@ -59,7 +64,6 @@
     </footer>
 
 
-    @*@Scripts.Render("~/bundles/homeBundle")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
