--- a/Web WareHouse/WebWareHouse.UI/Views/Goods/DetailInfo.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Goods/DetailInfo.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Webwarehouse.UI.Models.GoodStatisticViewModel
 <div id="goodDetInfo">
-    <p>Название товара: @Model.GoodName</p>
-    <p>Цена товара:@Model.Price</p>
-    <p>Общая цена товара:@Model.TotalPrice</p>
-    <p>Общая количество товара:@Model.TotalQuantity</p>
+    <p>Name: @Model.GoodName</p>
+    <p>Price:@Model.Price</p>
+    <p>Total value:@Model.TotalPrice</p>
+    <p>Total quantity:@Model.TotalQuantity</p>
 </div>
 @if (@Model.GoodId != -1)
 {
