--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
@@ -5,10 +5,11 @@
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-    <link href="~/Content/DivTable.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Custom/MyCss.css" rel="stylesheet" type="text/css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+
 
 
 
