--- a/Web WareHouse/WebWareHouse.UI/Content/Site.css
+++ b/Web WareHouse/WebWareHouse.UI/Content/Site.css
@@ -2,6 +2,7 @@
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
+    zoom: 150%;
 }
 
 body {
@@ -10,8 +11,9 @@ body {
     color: #333;
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    margin: 0;
+    margin: auto, 0, auto, 0;
     padding: 0;
+
 }
 
 a {
@@ -102,7 +104,9 @@ h5, h6 {
     background-color: #efeeef;
     clear: both;
     padding-bottom: 35px;
-    width: 95%
+    width: 95%;
+
+    
 }
 
     .main-content {
