--- a/Web WareHouse/WebWareHouse.UI/Views/Account/Register.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Account/Register.cshtml
@@ -8,32 +8,33 @@
     <h1>@ViewBag.Title.</h1>
     <h2>Создание нового аккаунта</h2>
 </hgroup>
+<div class="asc">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary()
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary()
-
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
-            <li>
-                <label>Имя пользователя</label>
-                @Html.TextBoxFor(m => m.UserName)
-            </li>
-            <li>
-                <label>Пароль</label>
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                <label>Подтверждение пароля</label>
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <input type="submit" value="Регистрация" />
-        @Html.ActionLink("Вернуться", "Login") к вводу логина.
-    </fieldset>
-}
-
+        <fieldset>
+            <legend>Registration Form</legend>
+            <ol>
+                <li>
+                    <label>Имя пользователя</label>
+                    @Html.TextBoxFor(m => m.UserName)
+                </li>
+                <li>
+                    <label>Пароль</label>
+                    @Html.PasswordFor(m => m.Password)
+                </li>
+                <li>
+                    <label>Подтверждение пароля</label>
+                    @Html.PasswordFor(m => m.ConfirmPassword)
+                </li>
+            </ol>
+            <input type="submit" value="Регистрация" />
+            @Html.ActionLink("Вернуться", "Login") к вводу логина.
+        </fieldset>
+    }
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
