--- a/Web WareHouse/WebWareHouse.UI/Views/Operations/Add.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Operations/Add.cshtml
@@ -1,9 +1,6 @@
 ﻿@model Webwarehouse.Model.Entities.Operation
 
 
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-<script src="@Url.Content("~/Scripts/validations/OperationValidation.js")" type="text/javascript"></script>
 <div class="operationEditForm">
     @if (Model.GoodAttached != null)
     {
@@ -42,12 +39,15 @@
                 </div>
 
                 <p>
-                    <input type="submit" value="Создать" />
+                    <input type="submit" value="Create" id="operationCreateSubmit" />
                 </p>
             </fieldset>
         }
     }
 </div>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="@Url.Content("~/Scripts/validations/OperationValidation.js")" type="text/javascript"></script>
 
 @if (TempData["opMessage"] != null)
 {
