--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutLogin.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutLogin.cshtml
@@ -8,33 +8,39 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
 <body>
-    <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-            </div>
+   
+            <header>
+                <div class="content-wrapper">
+                    <div class="float-left">
+                        <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    </div>
 
-        </div>
-    </header>
-    <div id="body">
-        @RenderSection("featured", required: false)
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
-    </div>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
-            </div>
-        </div>
-    </footer>
+                </div>
+            </header>
+            <center>
+                <div id="body">
+                    @RenderSection("featured", required: false)
+                    <section class="content-wrapper main-content clear-fix">
+                        <center>
+                            @RenderBody()
+                        </center>
+                    </section>
+                </div>
+            </center>
+            <footer>
+                <div class="content-wrapper">
+                    <div class="float-left">
+                        <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
+                    </div>
+                </div>
+            </footer>
 
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
-    <script src="@Url.Content("~/Scripts/validations/LoginValidation.js")" type="text/javascript"></script>
+            @Scripts.Render("~/bundles/jquery")
+            @RenderSection("scripts", required: false)
+            <script src="@Url.Content("~/Scripts/validations/LoginValidation.js")" type="text/javascript"></script>
 
 </body>
 </html>
