--- a/Web WareHouse/WebWareHouse.UI/Views/Goods/AddGood.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Goods/AddGood.cshtml
@@ -1,4 +1,4 @@
-﻿@model Webwarehouse.Model.Entities.Good
+﻿@model Webwarehouse.UI.Models.Entities.Good
 
 
 
@@ -27,7 +27,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Create"/>
         </p>
     </fieldset>
 }
