--- a/Web WareHouse/WebWareHouse.UI/Views/Goods/GoodListShow.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Goods/GoodListShow.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Webwarehouse.Model.Entities.Good>
 
-<div>
+<div id="jqgridtd">
     <table id="GridTable"></table>
     <div id="pager"></div>
 </div>
