--- a/Web WareHouse/WebWareHouse.UI/Views/Goods/DetailInfo.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Goods/DetailInfo.cshtml
@@ -1,31 +1,42 @@
 ﻿@model Webwarehouse.UI.Models.GoodStatisticViewModel
-<div id="goodDetInfo">
-    <p>Name: @Model.GoodName</p>
-    <p>Price:@Model.Price</p>
-    <p>Total value:@Model.TotalPrice</p>
-    <p>Total quantity:@Model.TotalQuantity</p>
-</div>
-@if (@Model.GoodId != -1)
-{
-    <div class="table">
-        <div class="tr">
-            <div class="td">
-                @using (Ajax.BeginForm("OperationSelector", new AjaxOptions { UpdateTargetId = "foo", OnSuccess = "onSuccess" }))
-                {
-                @Html.Hidden("idVal", Model.GoodId);
-                <input type="submit" name="Command" value="Статистика операций" />
-                }
-            </div>
-            <div class="td">
-                @using (Ajax.BeginForm("Add", "Operations", new AjaxOptions { UpdateTargetId = "addOper", HttpMethod = "Get" }))
-                {
-                @Html.Hidden("idVal", Model.GoodId);
-                <input type="submit" name="Command" value="Добавить операцию" />
-                }
+<center>
+    <div id="good-det-inf">
+
+        <p class="editor-label">Name: @Model.GoodName</p>
+        <p class="editor-label">Price:@Model.Price</p>
+        <p class="editor-label">Total value:@Model.TotalPrice</p>
+        <p id="tqInfo">Total quantity:@Model.TotalQuantity</p>
+    </div>
+    @if (@Model.GoodId != -1)
+    {
+        <div class="table">
+            <div class="tr">
+
+                <div class="td">
+
+                    @*  @using (Ajax.BeginForm("OperationSelector", new AjaxOptions { UpdateTargetId = "foo", OnSuccess = "onSuccess", HttpMethod = "Get" }))*@
+                    @using (Html.BeginForm("GetOperationsList", "Operations"))
+                    {
+                        @Html.Hidden("idValue", Model.GoodId as int?)
+                        <input type="submit" name="Command" value="Operation statistic"/>
+                    }
+                </div>
+                <div class="td">
+                    @using (Ajax.BeginForm("AddOperation", "Operations", new AjaxOptions {UpdateTargetId = "addOper", HttpMethod = "Get"}))
+                    {
+                        @Html.Hidden("idValue", Model.GoodId as int?)
+                        <input type="submit" name="Command" value="Add operation"/>
+                    }
+                </div>
+
             </div>
         </div>
-    </div>
-    
-    
+        <script src="@Url.Content("~/Scripts/Others/Service.js")" type="text/javascript"></script>
+    }
+</center>
+@if (TempData["opMessage"] != null)
+{
+    <script type="text/javascript">
+        alert(@Html.Raw(Json.Encode(TempData["opMessage"])));
+    </script>
 }
-
