--- a/Web WareHouse/WebWareHouse.UI/Views/Operations/Add.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Operations/Add.cshtml
@@ -8,39 +8,42 @@
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
-
+            @Html.Hidden("idVal", @Model.GoodAttached.GoodId);
             <fieldset>
                 <legend>Operation</legend>
+                <center>
+                    <div class="editor-label my-header">
+                        <label>Goods name: @Model.GoodAttached.GoodName</label>
 
-                <div class="editor-label">
-                    <label>Goods name: @Model.GoodAttached.GoodName</label>
-                </div>
+                    </div>
 
-                <div class="editor-label">
-                    <label>Количество товара</label>
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Quantity, new { @class = "goodNumber" })
-                    @Html.ValidationMessageFor(model => model.Quantity)
-                </div>
+                    <div class="editor-label">
+                        <label>Количество товара</label>
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Quantity, new { @class = "goodNumber" })
+                        @*commented because jquery validation has more functions*@
+                        @*@Html.ValidationMessageFor(model => model.Quantity)*@
+                    </div>
+                    <div id="validation-info-anchor"></div>
+                    <div class="editor-label">
+                        <label>Тип операции</label>
+                    </div>
+                    <div class="editor-field">
 
-                <div class="editor-label">
-                    <label>Тип операции</label>
-                </div>
-                <div class="editor-field">
+                        <select name="OperType", class="my-select">
+                            @foreach (var i in (Enum.GetNames(typeof(Webwarehouse.Model.Entities.OperationType))))
+                            {
+                                <option>@i</option>
+                            }
+                        </select>
 
-                    <select name="OperType">
-                        @foreach (var i in (Enum.GetNames(typeof(Webwarehouse.Model.Entities.OperationType))))
-                        {
-                            <option>@i</option>
-                        }
-                    </select>
+                    </div>
 
-                </div>
-
-                <p>
-                    <input type="submit" value="Create" id="operationCreateSubmit" />
-                </p>
+                    <p>
+                        <input type="submit" value="Create" id="operationCreateSubmit" />
+                    </p>
+                </center>
             </fieldset>
         }
     }
@@ -49,9 +52,4 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 <script src="@Url.Content("~/Scripts/validations/OperationValidation.js")" type="text/javascript"></script>
 
-@if (TempData["opMessage"] != null)
-{
-    <script type="text/javascript">
-                            alert(@Html.Raw(Json.Encode(TempData["opMessage"])));
-    </script>
-}
+
