--- a/Web WareHouse/WebWareHouse.UI/Views/Operations/GetOperationsList.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Operations/GetOperationsList.cshtml
@@ -1,28 +1,17 @@
-﻿@model IEnumerable<Webwarehouse.Model.Entities.Operation>
+﻿@model String
 
 @{
     Layout = "~/Views/Shared/_LayoutStatistic.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>OperationsList</title>
-
-    <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
-    <link href="~/Content/jquery.jqGrid/ui.jqgrid.css" rel="stylesheet" />
+<div class="static-window">
+    <div class="header-create">@Model</div>
+    <table id="GridTable"></table>
+    <div id="pager"></div>
     
-
-</head>
-<body>
-    <div>
-        <table id="GridTable"></table>
-        <div id="pager"></div>
-    </div>
-    <div>
-        @Html.ActionLink("На главную", "Index", "Home") страницу
 </div>
-</body>
-</html>
+<div>
+    Return to @Html.ActionLink("main page", "Index", "Home") 
+</div>
+
+
