--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutLogin.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutLogin.cshtml
@@ -1,46 +1,45 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>@ViewBag.Title - WW Login</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="~/Content/Custom/MyCss.css">
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width"/>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-   
-            <header>
-                <div class="content-wrapper">
-                    <div class="float-left">
-                        <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                    </div>
 
-                </div>
-            </header>
-            <center>
-                <div id="body">
-                    @RenderSection("featured", required: false)
-                    <section class="content-wrapper main-content clear-fix">
-                        <center>
-                            @RenderBody()
-                        </center>
-                    </section>
-                </div>
-            </center>
-            <footer>
-                <div class="content-wrapper">
-                    <div class="float-left">
-                        <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
-                    </div>
-                </div>
-            </footer>
+<header>
+    <div class="content-wrapper">
+        <div class="float-left">
+            <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+        </div>
 
-            @Scripts.Render("~/bundles/jquery")
-            @RenderSection("scripts", required: false)
-            <script src="@Url.Content("~/Scripts/validations/LoginValidation.js")" type="text/javascript"></script>
+    </div>
+</header>
+
+<div id="body">
+    @RenderSection("featured", false)
+    <section class="content-wrapper main-content clear-fix">
+        <center>
+            @RenderBody()
+        </center>
+    </section>
+</div>
+@*<footer id="site-footer">
+        <div class="content-wrapper">
+            <div>
+                <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
+            </div>
+        </div>
+    </footer>*@
+
+@Scripts.Render("~/bundles/jquery")
+@RenderSection("scripts", false)
+<script src="@Url.Content("~/Scripts/validations/LoginValidation.js")" type="text/javascript"></script>
 
 </body>
 </html>
