--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutStatistic.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_LayoutStatistic.cshtml
@@ -1,50 +1,55 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8"/>
+    <title>@ViewBag.Title Statistic</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width"/>
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+
     <script src="~/Scripts/i18n/grid.locale-en.js"></script>
     <script src="~/Scripts/jquery.jqGrid.min.js"></script>
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
-    <script src="~/Scripts/JQGridOperations.js"></script>
-
+    <link href="~/Content/Custom/MyCss.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+    <link href="~/Content/jquery.jqGrid/ui.jqgrid.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.jqGrid.min.js"></script>
+    
 </head>
 <body>
-    <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-            </div>
-            <div class="float-right">
-                <section id="login">
-                    @Html.Partial("_LoginPartial")
-                </section>
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Главная страница", "Index", "Home")</li>
-                    </ul>
-                </nav>
-            </div>
+<header>
+    <div class="content-wrapper">
+        <div class="float-left">
+            <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
         </div>
-    </header>
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - - Web Warehouse</p>
-            </div>
+        <div class="float-right">
+            <section id="login">
+                @Html.Partial("_LoginPartial")
+            </section>
+            <nav>
+                <ul id="menu">
+                    <li>@Html.ActionLink("Main Page", "Index", "Home")</li>
+                </ul>
+            </nav>
         </div>
-    </footer>
+    </div>
+</header>
+<section class="content-wrapper main-content clear-fix">
+    @RenderBody()
+</section>
+    <script src="~/Scripts/JQGridOperations.js"></script>
+<footer id="site-footer">
+    <div class="content-wrapper">
+        <div>
+            <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
+        </div>
+    </div>
+</footer>
 
-   
-    @RenderSection("scripts", required: false)
+
+@RenderSection("scripts", false)
 </body>
 </html>
