only little fixes left

--- a/Web WareHouse/WebWareHouse.UI/Views/Home/Index.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Главная страница";
+    ViewBag.Title = "Main page";
 }
 @section featured {
     <section class="featured">
