--- a/Web WareHouse/WebWareHouse.UI/Views/Account/Login.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Account/Login.cshtml
@@ -24,20 +24,17 @@
                 <li>
                     <label>User name</label>
                     @Html.TextBoxFor(m => m.UserName, new {@class = "center"})
-                    @Html.ValidationMessageFor(m => m.UserName)
-
                 </li>
                 <li>
                     <label>Password</label>
                     @Html.PasswordFor(m => m.Password)
-                    @Html.ValidationMessageFor(m => m.Password)
                 </li>
                 <li>
                     @Html.CheckBoxFor(m => m.RememberMe)
                     @Html.Label("Remember me?", new {@class = "checkbox"})
                 </li>
             </ol>
-            <input type="submit" value="Вход"/>
+            <input type="submit" value="Enter"/>
         </fieldset>
         <p>
             @Html.ActionLink("Register", "Register"), if you don't have account yet.
