--- a/Web WareHouse/WebWareHouse.UI/Views/Account/Register.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Account/Register.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Webwarehouse.UI.Models.Entities.RegisterModel
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "Registration";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Создание нового аккаунта</h2>
+    <h2>New user registration</h2>
 </hgroup>
 <div class="asc">
     @using (Html.BeginForm())
@@ -18,20 +17,20 @@
             <legend>Registration Form</legend>
             <ol>
                 <li>
-                    <label>Имя пользователя</label>
+                    <label>User name</label>
                     @Html.TextBoxFor(m => m.UserName)
                 </li>
                 <li>
-                    <label>Пароль</label>
+                    <label>Password</label>
                     @Html.PasswordFor(m => m.Password)
                 </li>
                 <li>
-                    <label>Подтверждение пароля</label>
+                    <label>Confirm password</label>
                     @Html.PasswordFor(m => m.ConfirmPassword)
                 </li>
             </ol>
-            <input type="submit" value="Регистрация"/>
-            @Html.ActionLink("Вернуться", "Login") к вводу логина.
+            <input type="submit" value="Registration"/>
+            @Html.ActionLink("Return", "Login") to login.
         </fieldset>
     }
 </div>
