--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_LoginPartial.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new {id = "logoutForm"}))
         {
             @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">выйти из системы</a>
+            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
         }
     </text>
 }
