--- a/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
+++ b/Web WareHouse/WebWareHouse.UI/Views/Shared/_Layout.cshtml
@@ -5,62 +5,82 @@
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width"/>
+
     <link href="~/Content/Custom/MyCss.css" rel="stylesheet" type="text/css"/>
+    <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+    <link href="~/Content/jquery.jqGrid/ui.jqgrid.css" rel="stylesheet" />
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
 
+    
+    <script src="~/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Scripts/jquery-ui-1.10.0.min.js"></script>
+    <script src="~/Scripts/i18n/grid.locale-en.js"></script>
+    <script src="~/Scripts/jquery.jqGrid.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-    <script src="@Url.Content("~/Scripts/validations/OperationValidation.js")" type="text/javascript"></script>
-
+    <script src="~/Scripts/JQGridGoods.js"></script>
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
 
 </head>
 <body>
 <header>
     <div class="content-wrapper">
-        <div class="float-left">
-            <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-        </div>
+        @* Site logo html helper *@
+        @Html.CreateLogo("WWHouse")
+
+        @* Current user name and log off *@
         <div class="float-right">
             <section id="login">
                 @Html.Partial("_LoginPartial")
             </section>
+
+            @* Common pages links *@
             <nav>
                 <ul id="menu">
                     <li>@Html.ActionLink("Main page", "Index", "Home")</li>
                 </ul>
             </nav>
         </div>
-    </div>
+     </div>
 </header>
-<div id="body-no-width">
-    @RenderSection("featured", false)
-    <section class="content-wrapper main-content clear-fix">
-        @RenderBody()
-    </section>
-</div>
-<div id="body">
-    <div class="tableF">
-        <div class="tr">
 
-            <div class="td">
+        @* Header proper view*@
+    <div id="body-no-width">
+        @RenderSection("featured", false)
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
 
-                @{ Html.RenderAction("GoodsListShow", "Goods"); }
-            </div>
-            <div class="td" style="width: 380px">
-                @{ Html.RenderAction("DetailInfo", "Goods"); }
+        @* Main section of page *@
+    <div id="body">
+        <div class="tableF">
+            <div class="tr">
 
-                <div id="addOper">
+                <div class="td">
+                    @*Jqgrid with all goods  *@
+                    @{ Html.RenderAction("GoodsListShow", "Goods"); }
+                </div>
 
+                <div class="td" style="width: 380px">
+                        @* Good's detailed info*@
+                    @{ Html.RenderAction("DetailInfo", "Goods"); }
+
+                        @* New opeartion add placeholder *@
+                    <div id="addOper">
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-@Html.CreateFooter(@DateTime.Now.Year +" - Web Warehouse")
+        @* Footer Htmlhelper*@
+    @Html.CreateFooter(@DateTime.Now.Year +" - Web Warehouse")
 
-@RenderSection("scripts", false)
-</body>
-</html>
+    @RenderSection("scripts", false)
+    </body>
+    </html>
