--- a/Web Warehouse/Webwarehouse.UI/Views/Goods/GoodsListShow.cshtml
+++ b/Web Warehouse/Webwarehouse.UI/Views/Goods/GoodsListShow.cshtml
@@ -1,17 +1,11 @@
-﻿@model IEnumerable<Webwarehouse.UI.Models.Entities.Good>
+﻿@* Partial View for Jqgrid for all goods*@
 
+@model IEnumerable<Webwarehouse.UI.Models.Entities.Good>
+
+@*Jqgrid placeholder  *@
 <div id="jqgrid-td">
     <table id="GridTable"></table>
     <div id="pager"></div>
 </div>
 
-<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet"/>
-<link href="~/Content/jquery.jqGrid/ui.jqgrid.css" rel="stylesheet"/>
-<script src="~/Scripts/jquery-1.9.1.min.js"></script>
-<script src="~/Scripts/jquery-ui-1.10.0.min.js"></script>
-<script src="~/Scripts/i18n/grid.locale-en.js"></script>
-<script src="~/Scripts/jquery.jqGrid.min.js"></script>
-<script src="~/Scripts/JQGridGoods.js"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
 
-<div id="GoodInfo"></div>
