--- a/Web Warehouse/Webwarehouse.UI/Views/Operations/AddOperation.cshtml
+++ b/Web Warehouse/Webwarehouse.UI/Views/Operations/AddOperation.cshtml
@@ -1,8 +1,11 @@
-﻿@using Webwarehouse.UI.Models.Entities
+﻿    @* Partial view - add new operation on main view *@
+
+@using Webwarehouse.UI.Models.Entities
 @model Operation
 
 
 <div class="operationEditForm">
+        @* Check if we selected any good *@
     @if (Model.GoodAttached != null)
     {
         using (Ajax.BeginForm("AddOperation", new AjaxOptions {UpdateTargetId = "good-det-inf", HttpMethod = "Post"}))
@@ -10,6 +13,8 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
             @Html.Hidden("IdValue", @Model.GoodAttached.GoodId)
+
+                //Input fields
             <fieldset>
                 <legend>Operation</legend>
                 <center>
@@ -23,9 +28,12 @@
                     </div>
                     <div class="editor-field">
                         @Html.EditorFor(model => model.Quantity, new {@class = "goodNumber"})
+
                         @*commented because jquery validation has more functions*@
                         @*@Html.ValidationMessageFor(model => model.Quantity)*@
                     </div>
+                    
+                        @*placeholder for validation info*@
                     <div id="validation-info-anchor"></div>
                     <div class="editor-label">
                         <label>Opeartion type</label>
@@ -49,6 +57,5 @@
         }
     }
 </div>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <script src="@Url.Content("~/Scripts/validations/OperationValidation.js")" type="text/javascript"></script>
