--- a/View edit/Webwarehouse.UI/Views/Goods/AddGood.cshtml
+++ b/View edit/Webwarehouse.UI/Views/Goods/AddGood.cshtml
@@ -1,7 +1,4 @@
-﻿@model Webwarehouse.Model.Entities.Good
-
-
-
+﻿@model Webwarehouse.UI.Models.Entities.Good
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -27,7 +24,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Create"/>
         </p>
     </fieldset>
 }
