--- a/View edit/Webwarehouse.UI/Views/Home/Index.cshtml
+++ b/View edit/Webwarehouse.UI/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Главная страница";
+﻿@* Body of site - header proper view  *@
+@{
+    ViewBag.Title = "Main page";
 }
 @section featured {
     <section class="featured">
@@ -10,4 +11,3 @@
         </div>
     </section>
 }
-
