--- a/View edit/Webwarehouse.UI/Views/Account/Register.cshtml
+++ b/View edit/Webwarehouse.UI/Views/Account/Register.cshtml
@@ -1,12 +1,13 @@
-﻿@model Webwarehouse.Model.Entities.RegisterModel
+﻿@* View for user to register on page *@
+
+@model Webwarehouse.UI.Models.Entities.RegisterModel
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "Registration";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Создание нового аккаунта</h2>
+    <h2>New user registration</h2>
 </hgroup>
 <div class="asc">
     @using (Html.BeginForm())
@@ -14,24 +15,27 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
 
+            //User's data inputs 
         <fieldset>
             <legend>Registration Form</legend>
             <ol>
-                <li>
-                    <label>Имя пользователя</label>
+                <li class="container-fix">
+                    <label>User name</label>
                     @Html.TextBoxFor(m => m.UserName)
                 </li>
-                <li>
-                    <label>Пароль</label>
+                <li  class="container-fix">
+                    <label>Password</label>
                     @Html.PasswordFor(m => m.Password)
                 </li>
-                <li>
-                    <label>Подтверждение пароля</label>
+                <li  class="container-fix">
+                    <label>Confirm password</label>
                     @Html.PasswordFor(m => m.ConfirmPassword)
                 </li>
             </ol>
-            <input type="submit" value="Регистрация" />
-            @Html.ActionLink("Вернуться", "Login") к вводу логина.
+            <input type="submit" value="Registration"/>
+
+                @*Link to login window*@
+            @Html.ActionLink("Return", "Login") to login.
         </fieldset>
     }
 </div>
