--- a/View edit/Webwarehouse.UI/Views/Goods/DetailInfo.cshtml
+++ b/View edit/Webwarehouse.UI/Views/Goods/DetailInfo.cshtml
@@ -1,43 +1,50 @@
-﻿@model Webwarehouse.UI.Models.GoodStatisticViewModel
-<center>
-    <div id="goodDetInfo" class="goodDetInfo">
+﻿    @* Partial view which cintains detail info of good *@
 
-        <p  class="editor-label">Name: @Model.GoodName</p>
+@model Webwarehouse.UI.Models.GoodStatisticViewModel
+<center>
+    <div id="good-det-inf">
+
+        @* Detail information *@
+        <p class="editor-label">Name: @Model.GoodName</p>
         <p class="editor-label">Price:@Model.Price</p>
         <p class="editor-label">Total value:@Model.TotalPrice</p>
         <p id="tqInfo">Total quantity:@Model.TotalQuantity</p>
     </div>
+
+        @* If any good is chosen - apply good operations managment buttons *@
     @if (@Model.GoodId != -1)
     {
         <div class="table">
             <div class="tr">
 
                 <div class="td">
-
-                    @*  @using (Ajax.BeginForm("OperationSelector", new AjaxOptions { UpdateTargetId = "foo", OnSuccess = "onSuccess", HttpMethod = "Get" }))*@
+                        @*Get all operation for selected good  *@
                     @using (Html.BeginForm("GetOperationsList", "Operations"))
                     {
-                        @Html.Hidden("idVal", Model.GoodId as int?);
-                        <input type="submit" name="Command" , value="Operation statistic" />
+                        @Html.Hidden("idValue", Model.GoodId as int?)
+                        <input type="submit" name="Command" value="Operation statistic"/>
                     }
                 </div>
+
                 <div class="td">
-                    @using (Ajax.BeginForm("Add", "Operations", new AjaxOptions { UpdateTargetId = "addOper", HttpMethod = "Get" }))
+                    @* Add new operation for selected good *@
+                    @using (Ajax.BeginForm("AddOperation", "Operations", new AjaxOptions {UpdateTargetId = "addOper", HttpMethod = "Get"}))
                     {
-                        @Html.Hidden("idVal", Model.GoodId as int?);
-                        <input type="submit" name="Command" value="Add operation" />
+                        @Html.Hidden("idValue", Model.GoodId as int?)
+                        <input type="submit" name="Command" value="Add operation"/>
                     }
                 </div>
 
             </div>
         </div>
         <script src="@Url.Content("~/Scripts/Others/Service.js")" type="text/javascript"></script>
-
     }
 </center>
+
+@* Notification message after new operation were added *@
 @if (TempData["opMessage"] != null)
 {
     <script type="text/javascript">
-                            alert(@Html.Raw(Json.Encode(TempData["opMessage"])));
+        alert(@Html.Raw(Json.Encode(TempData["opMessage"])));
     </script>
 }
