--- a/View edit/Webwarehouse.UI/Views/Operations/GetOperationsList.cshtml
+++ b/View edit/Webwarehouse.UI/Views/Operations/GetOperationsList.cshtml
@@ -1,40 +1,21 @@
-﻿@model IEnumerable<Webwarehouse.Model.Entities.Operation>
+﻿@* Partial View for operatios for selected good jqgrid, get good's name*@
 
+@model String
 @{
     Layout = "~/Views/Shared/_LayoutStatistic.cshtml";
-
 }
 
-<!DOCTYPE html>
+<div class="static-window">
+        @* Goods name *@
+    <div class="header-create">@Model</div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>OperationsList</title>
-    <link href="~/Content/Custom/MyCss.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
-    <link href="~/Content/jquery.jqGrid/ui.jqgrid.css" rel="stylesheet" />
-    <script src="~/Scripts/i18n/grid.locale-en.js"></script>
-    <script src="~/Scripts/jquery.jqGrid.min.js"></script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
-    <script src="~/Scripts/JQGridOperations.js"></script>
-
-</head>
-<body>
-    <div class="static-window">
-
-        <table id="GridTable"></table>
-        <div id="pager"></div>
-    </div>
-    <div>
-        @Html.ActionLink("На главную", "Index", "Home") страницу
+        @* Jqgrid placeholder *@
+    <table id="GridTable"></table>
+    <div id="pager"></div>
+    
 </div>
-    @*<footer id="site-footer">
-        <div class="content-wrapper">
-            <div>
-                <p>&copy; @DateTime.Now.Year - Web Warehouse</p>
-            </div>
-        </div>
-    </footer>*@
-</body>
-</html>
+<div>
+    Return to @Html.ActionLink("Main page", "Index", "Home") 
+</div>
+
+
